asm_tests/other_testfiles/invalid_files/error18.s
.comment "MORJESTA!"
.name "MORO"
.name "MORO"

sti r1, r2, r3
